src/abc/parser/HeaderParser.java
// Generated from Header.g4 by ANTLR 4.5.1

package abc.parser;
// Do not edit this .java file! Edit the .g4 file and re-run Antlr.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HeaderParser extends Parser {
  static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
    T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, 
    T__16=17, T__17=18, T__18=19, KEY_SIG_LETTER=20, C=21, M=22, OTHER_LETTER=23, 
    NUMBER=24, NEWLINE=25, WHITESPACE=26;
  public static final int
    RULE_header = 0, RULE_index_field = 1, RULE_title_field = 2, RULE_comment = 3, 
    RULE_optional_fields = 4, RULE_composer_field = 5, RULE_length_field = 6, 
    RULE_meter_field = 7, RULE_tempo_field = 8, RULE_voice_field = 9, RULE_key_field = 10, 
    RULE_end_line = 11, RULE_key = 12, RULE_string = 13, RULE_length = 14, 
    RULE_meter = 15, RULE_tempo = 16;
  public static final String[] ruleNames = {
    "header", "index_field", "title_field", "comment", "optional_fields", 
    "composer_field", "length_field", "meter_field", "tempo_field", "voice_field", 
    "key_field", "end_line", "key", "string", "length", "meter", "tempo"
  };

  private static final String[] _LITERAL_NAMES = {
    null, "'X:'", "'T:'", "'%'", "'C:'", "'L:'", "'M:'", "'Q:'", "'V:'", 
    "'K:'", "'#'", "'_'", "'.'", "','", "'''", "'/'", "'-'", "':'", "'|'", 
    "'='", null, "'C'", "'m'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null, null, null, null, null, null, null, null, null, null, null, null, 
    null, null, null, null, null, null, null, null, "KEY_SIG_LETTER", "C", 
    "M", "OTHER_LETTER", "NUMBER", "NEWLINE", "WHITESPACE"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() { return "Header.g4"; }

  @Override
  public String[] getRuleNames() { return ruleNames; }

  @Override
  public String getSerializedATN() { return _serializedATN; }

  @Override
  public ATN getATN() { return _ATN; }


      // This method makes the parser stop running if it encounters
      // invalid input and throw a RuntimeException.
      public void reportErrorsAsExceptions() {
          // To prevent any reports to standard error, add this line:
          //removeErrorListeners();
          
          addErrorListener(new BaseErrorListener() {
              public void syntaxError(Recognizer<?, ?> recognizer,
                                      Object offendingSymbol, 
                                      int line, int charPositionInLine,
                                      String msg, RecognitionException e) {
                  throw new ParseCancellationException(msg, e);
              }
          });
      }

  public HeaderParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
  }
  public static class HeaderContext extends ParserRuleContext {
    public Index_fieldContext index_field() {
      return getRuleContext(Index_fieldContext.class,0);
    }
    public Title_fieldContext title_field() {
      return getRuleContext(Title_fieldContext.class,0);
    }
    public Key_fieldContext key_field() {
      return getRuleContext(Key_fieldContext.class,0);
    }
    public List<CommentContext> comment() {
      return getRuleContexts(CommentContext.class);
    }
    public CommentContext comment(int i) {
      return getRuleContext(CommentContext.class,i);
    }
    public List<Optional_fieldsContext> optional_fields() {
      return getRuleContexts(Optional_fieldsContext.class);
    }
    public Optional_fieldsContext optional_fields(int i) {
      return getRuleContext(Optional_fieldsContext.class,i);
    }
    public HeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_header; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitHeader(this);
    }
  }

  public final HeaderContext header() throws RecognitionException {
    HeaderContext _localctx = new HeaderContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_header);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(34);
      index_field();
      setState(38);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while (_la==T__2) {
        {
        {
        setState(35);
        comment();
        }
        }
        setState(40);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(41);
      title_field();
      setState(45);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) {
        {
        {
        setState(42);
        optional_fields();
        }
        }
        setState(47);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(48);
      key_field();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Index_fieldContext extends ParserRuleContext {
    public TerminalNode NUMBER() { return getToken(HeaderParser.NUMBER, 0); }
    public End_lineContext end_line() {
      return getRuleContext(End_lineContext.class,0);
    }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public Index_fieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_index_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterIndex_field(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitIndex_field(this);
    }
  }

  public final Index_fieldContext index_field() throws RecognitionException {
    Index_fieldContext _localctx = new Index_fieldContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_index_field);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(50);
      match(T__0);
      setState(52);
      _la = _input.LA(1);
      if (_la==WHITESPACE) {
        {
        setState(51);
        match(WHITESPACE);
        }
      }

      setState(54);
      match(NUMBER);
      setState(55);
      end_line();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Title_fieldContext extends ParserRuleContext {
    public StringContext string() {
      return getRuleContext(StringContext.class,0);
    }
    public End_lineContext end_line() {
      return getRuleContext(End_lineContext.class,0);
    }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public Title_fieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_title_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterTitle_field(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitTitle_field(this);
    }
  }

  public final Title_fieldContext title_field() throws RecognitionException {
    Title_fieldContext _localctx = new Title_fieldContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_title_field);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(57);
      match(T__1);
      setState(59);
      switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
      case 1:
        {
        setState(58);
        match(WHITESPACE);
        }
        break;
      }
      setState(61);
      string();
      setState(62);
      end_line();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class CommentContext extends ParserRuleContext {
    public StringContext string() {
      return getRuleContext(StringContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(HeaderParser.NEWLINE, 0); }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public CommentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_comment; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterComment(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitComment(this);
    }
  }

  public final CommentContext comment() throws RecognitionException {
    CommentContext _localctx = new CommentContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_comment);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(64);
      match(T__2);
      setState(66);
      switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
      case 1:
        {
        setState(65);
        match(WHITESPACE);
        }
        break;
      }
      setState(68);
      string();
      setState(69);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Optional_fieldsContext extends ParserRuleContext {
    public Composer_fieldContext composer_field() {
      return getRuleContext(Composer_fieldContext.class,0);
    }
    public Length_fieldContext length_field() {
      return getRuleContext(Length_fieldContext.class,0);
    }
    public Meter_fieldContext meter_field() {
      return getRuleContext(Meter_fieldContext.class,0);
    }
    public Tempo_fieldContext tempo_field() {
      return getRuleContext(Tempo_fieldContext.class,0);
    }
    public Voice_fieldContext voice_field() {
      return getRuleContext(Voice_fieldContext.class,0);
    }
    public CommentContext comment() {
      return getRuleContext(CommentContext.class,0);
    }
    public Optional_fieldsContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_optional_fields; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterOptional_fields(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitOptional_fields(this);
    }
  }

  public final Optional_fieldsContext optional_fields() throws RecognitionException {
    Optional_fieldsContext _localctx = new Optional_fieldsContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_optional_fields);
    try {
      setState(77);
      switch (_input.LA(1)) {
      case T__3:
        enterOuterAlt(_localctx, 1);
        {
        setState(71);
        composer_field();
        }
        break;
      case T__4:
        enterOuterAlt(_localctx, 2);
        {
        setState(72);
        length_field();
        }
        break;
      case T__5:
        enterOuterAlt(_localctx, 3);
        {
        setState(73);
        meter_field();
        }
        break;
      case T__6:
        enterOuterAlt(_localctx, 4);
        {
        setState(74);
        tempo_field();
        }
        break;
      case T__7:
        enterOuterAlt(_localctx, 5);
        {
        setState(75);
        voice_field();
        }
        break;
      case T__2:
        enterOuterAlt(_localctx, 6);
        {
        setState(76);
        comment();
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Composer_fieldContext extends ParserRuleContext {
    public StringContext string() {
      return getRuleContext(StringContext.class,0);
    }
    public End_lineContext end_line() {
      return getRuleContext(End_lineContext.class,0);
    }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public Composer_fieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_composer_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterComposer_field(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitComposer_field(this);
    }
  }

  public final Composer_fieldContext composer_field() throws RecognitionException {
    Composer_fieldContext _localctx = new Composer_fieldContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_composer_field);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(79);
      match(T__3);
      setState(81);
      switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
      case 1:
        {
        setState(80);
        match(WHITESPACE);
        }
        break;
      }
      setState(83);
      string();
      setState(84);
      end_line();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Length_fieldContext extends ParserRuleContext {
    public LengthContext length() {
      return getRuleContext(LengthContext.class,0);
    }
    public End_lineContext end_line() {
      return getRuleContext(End_lineContext.class,0);
    }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public Length_fieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_length_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterLength_field(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitLength_field(this);
    }
  }

  public final Length_fieldContext length_field() throws RecognitionException {
    Length_fieldContext _localctx = new Length_fieldContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_length_field);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(86);
      match(T__4);
      setState(88);
      _la = _input.LA(1);
      if (_la==WHITESPACE) {
        {
        setState(87);
        match(WHITESPACE);
        }
      }

      setState(90);
      length();
      setState(91);
      end_line();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Meter_fieldContext extends ParserRuleContext {
    public MeterContext meter() {
      return getRuleContext(MeterContext.class,0);
    }
    public End_lineContext end_line() {
      return getRuleContext(End_lineContext.class,0);
    }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public Meter_fieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_meter_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterMeter_field(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitMeter_field(this);
    }
  }

  public final Meter_fieldContext meter_field() throws RecognitionException {
    Meter_fieldContext _localctx = new Meter_fieldContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_meter_field);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(93);
      match(T__5);
      setState(95);
      _la = _input.LA(1);
      if (_la==WHITESPACE) {
        {
        setState(94);
        match(WHITESPACE);
        }
      }

      setState(97);
      meter();
      setState(98);
      end_line();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Tempo_fieldContext extends ParserRuleContext {
    public TempoContext tempo() {
      return getRuleContext(TempoContext.class,0);
    }
    public End_lineContext end_line() {
      return getRuleContext(End_lineContext.class,0);
    }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public Tempo_fieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_tempo_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterTempo_field(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitTempo_field(this);
    }
  }

  public final Tempo_fieldContext tempo_field() throws RecognitionException {
    Tempo_fieldContext _localctx = new Tempo_fieldContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_tempo_field);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(100);
      match(T__6);
      setState(102);
      _la = _input.LA(1);
      if (_la==WHITESPACE) {
        {
        setState(101);
        match(WHITESPACE);
        }
      }

      setState(104);
      tempo();
      setState(105);
      end_line();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Voice_fieldContext extends ParserRuleContext {
    public StringContext string() {
      return getRuleContext(StringContext.class,0);
    }
    public End_lineContext end_line() {
      return getRuleContext(End_lineContext.class,0);
    }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public Voice_fieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_voice_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterVoice_field(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitVoice_field(this);
    }
  }

  public final Voice_fieldContext voice_field() throws RecognitionException {
    Voice_fieldContext _localctx = new Voice_fieldContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_voice_field);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(107);
      match(T__7);
      setState(109);
      switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
      case 1:
        {
        setState(108);
        match(WHITESPACE);
        }
        break;
      }
      setState(111);
      string();
      setState(112);
      end_line();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Key_fieldContext extends ParserRuleContext {
    public KeyContext key() {
      return getRuleContext(KeyContext.class,0);
    }
    public TerminalNode EOF() { return getToken(HeaderParser.EOF, 0); }
    public TerminalNode WHITESPACE() { return getToken(HeaderParser.WHITESPACE, 0); }
    public Key_fieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_key_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterKey_field(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitKey_field(this);
    }
  }

  public final Key_fieldContext key_field() throws RecognitionException {
    Key_fieldContext _localctx = new Key_fieldContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_key_field);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(114);
      match(T__8);
      setState(116);
      _la = _input.LA(1);
      if (_la==WHITESPACE) {
        {
        setState(115);
        match(WHITESPACE);
        }
      }

      setState(118);
      key();
      setState(119);
      match(EOF);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class End_lineContext extends ParserRuleContext {
    public TerminalNode NEWLINE() { return getToken(HeaderParser.NEWLINE, 0); }
    public CommentContext comment() {
      return getRuleContext(CommentContext.class,0);
    }
    public End_lineContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_end_line; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterEnd_line(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitEnd_line(this);
    }
  }

  public final End_lineContext end_line() throws RecognitionException {
    End_lineContext _localctx = new End_lineContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_end_line);
    try {
      setState(123);
      switch (_input.LA(1)) {
      case NEWLINE:
        enterOuterAlt(_localctx, 1);
        {
        setState(121);
        match(NEWLINE);
        }
        break;
      case T__2:
        enterOuterAlt(_localctx, 2);
        {
        setState(122);
        comment();
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class KeyContext extends ParserRuleContext {
    public TerminalNode KEY_SIG_LETTER() { return getToken(HeaderParser.KEY_SIG_LETTER, 0); }
    public TerminalNode C() { return getToken(HeaderParser.C, 0); }
    public TerminalNode M() { return getToken(HeaderParser.M, 0); }
    public KeyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_key; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterKey(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitKey(this);
    }
  }

  public final KeyContext key() throws RecognitionException {
    KeyContext _localctx = new KeyContext(_ctx, getState());
    enterRule(_localctx, 24, RULE_key);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(125);
      _la = _input.LA(1);
      if ( !(_la==KEY_SIG_LETTER || _la==C) ) {
      _errHandler.recoverInline(this);
      } else {
        consume();
      }
      setState(127);
      _la = _input.LA(1);
      if (_la==T__9 || _la==T__10) {
        {
        setState(126);
        _la = _input.LA(1);
        if ( !(_la==T__9 || _la==T__10) ) {
        _errHandler.recoverInline(this);
        } else {
          consume();
        }
        }
      }

      setState(130);
      _la = _input.LA(1);
      if (_la==M) {
        {
        setState(129);
        match(M);
        }
      }

      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class StringContext extends ParserRuleContext {
    public List<TerminalNode> KEY_SIG_LETTER() { return getTokens(HeaderParser.KEY_SIG_LETTER); }
    public TerminalNode KEY_SIG_LETTER(int i) {
      return getToken(HeaderParser.KEY_SIG_LETTER, i);
    }
    public List<TerminalNode> C() { return getTokens(HeaderParser.C); }
    public TerminalNode C(int i) {
      return getToken(HeaderParser.C, i);
    }
    public List<TerminalNode> NUMBER() { return getTokens(HeaderParser.NUMBER); }
    public TerminalNode NUMBER(int i) {
      return getToken(HeaderParser.NUMBER, i);
    }
    public List<TerminalNode> M() { return getTokens(HeaderParser.M); }
    public TerminalNode M(int i) {
      return getToken(HeaderParser.M, i);
    }
    public List<TerminalNode> OTHER_LETTER() { return getTokens(HeaderParser.OTHER_LETTER); }
    public TerminalNode OTHER_LETTER(int i) {
      return getToken(HeaderParser.OTHER_LETTER, i);
    }
    public List<TerminalNode> WHITESPACE() { return getTokens(HeaderParser.WHITESPACE); }
    public TerminalNode WHITESPACE(int i) {
      return getToken(HeaderParser.WHITESPACE, i);
    }
    public StringContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_string; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterString(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitString(this);
    }
  }

  public final StringContext string() throws RecognitionException {
    StringContext _localctx = new StringContext(_ctx, getState());
    enterRule(_localctx, 26, RULE_string);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(133); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(132);
        _la = _input.LA(1);
        if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << KEY_SIG_LETTER) | (1L << C) | (1L << M) | (1L << OTHER_LETTER) | (1L << NUMBER) | (1L << WHITESPACE))) != 0)) ) {
        _errHandler.recoverInline(this);
        } else {
          consume();
        }
        }
        }
        setState(135); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << KEY_SIG_LETTER) | (1L << C) | (1L << M) | (1L << OTHER_LETTER) | (1L << NUMBER) | (1L << WHITESPACE))) != 0) );
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class LengthContext extends ParserRuleContext {
    public List<TerminalNode> NUMBER() { return getTokens(HeaderParser.NUMBER); }
    public TerminalNode NUMBER(int i) {
      return getToken(HeaderParser.NUMBER, i);
    }
    public LengthContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_length; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterLength(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitLength(this);
    }
  }

  public final LengthContext length() throws RecognitionException {
    LengthContext _localctx = new LengthContext(_ctx, getState());
    enterRule(_localctx, 28, RULE_length);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(140);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while (_la==NUMBER) {
        {
        {
        setState(137);
        match(NUMBER);
        }
        }
        setState(142);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(143);
      match(T__14);
      setState(147);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while (_la==NUMBER) {
        {
        {
        setState(144);
        match(NUMBER);
        }
        }
        setState(149);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class MeterContext extends ParserRuleContext {
    public List<TerminalNode> NUMBER() { return getTokens(HeaderParser.NUMBER); }
    public TerminalNode NUMBER(int i) {
      return getToken(HeaderParser.NUMBER, i);
    }
    public TerminalNode C() { return getToken(HeaderParser.C, 0); }
    public MeterContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_meter; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).enterMeter(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof HeaderListener ) ((HeaderListener)listener).exitMeter(this);
    }
  }
